# rtmc-lib

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  make.py
docs/: g-code.md  planning.md  todo.md
include/: rtmc_kins_scalar.h  rtmc_magic_numbers.h  rtmc_math.h  rtmc_parsed_block.h  rtmc_parser.h  rtmc_path.h
src/: math.c  parser.c  path.c
src/kins/: scalar.c
src/parser/: generate_path.c  parse_word.c  parser.c  parser.h
test/: kins_scalar_tests.cpp  math_tests.cpp  parser_tests.cpp  path_queue_tests.cpp  path_tests.cpp
